Leaderboard view with db request

--- a/app/src/main/res/navigation/mobile_navigation.xml
+++ b/app/src/main/res/navigation/mobile_navigation.xml
@@ -15,6 +15,6 @@
         android:id="@+id/nav_leaderboard"
         android:name="com.gougeonalzonne.android_morpion.ui.gallery.GalleryFragment"
         android:label="@string/leaderboard"
-        tools:layout="@layout/fragment_gallery" />
+        tools:layout="@layout/fragment_leaderboard" />
 
 </navigation>
