--- a/app/src/main/res/menu/activity_main_drawer.xml
+++ b/app/src/main/res/menu/activity_main_drawer.xml
@@ -6,6 +6,7 @@
     <group android:checkableBehavior="single">
         <item
             android:id="@+id/nav_login"
+            android:checked="true"
             android:icon="@drawable/ic_login"
             android:title="@string/login" />
         <item
@@ -16,5 +17,10 @@
             android:id="@+id/nav_leaderboard"
             android:icon="@drawable/ic_leaderboard"
             android:title="@string/leaderboard" />
+
+        <item
+            android:id="@+id/nav_game"
+            android:icon="@drawable/ic_game"
+            android:title="@string/game" />
     </group>
 </menu>
